--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/x64/MrzReader.dll
+/x64/MrzReader.exp
+/x64/MrzReader.lib
+/x64/Mrz_GUI.exe
