--- a/MrzReader/MrzReader.vcxproj.filters
+++ b/MrzReader/MrzReader.vcxproj.filters
@@ -136,5 +136,13 @@
     <ClInclude Include="mrz_data_type.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="MrzReader.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
